--- a/css/main.css
+++ b/css/main.css
@@ -3,38 +3,106 @@
 }
 .header{
 	float: inline-start;
-	height: 20%;
-	border: 1px solid #8c9900;
+	height: 15%;
+	width: 100%;
 }
 #headerLeft{
 	width: 30%;
+	float: left;
 	height: 100%;
 }
 #headerRight{
 	width: 70%;
+	float: left;
 	height: 100%;
 }
 .header .logo{
-	alig: left;
-	border: 1px solid #990000;
+	float: left;
+	font-size: 80px;
+	margin-top: -1%;
+	width: 100%;
 }
 .content{
 	height: 100%;
 	width: 100%;
-	border: 1px solid #009947;
 }
-.text-content{
-	height: 100%;
-	width:  60%;
-	border: 1px solid #260099;
+.webContent{
+	width: 45%;
+	height: 50%;
+	float: left;
 }
-.link-trans{
+.grid{
+	width: 50%;
+	height: 60%;
+	float: left;
+}
+.link-text{
 	height: 100%;
 	width: 40%;
-	border: 1px solid #940099;
+}
+*{
+  margin: 0;
+  padding: 0;
+}
+div{
+  vertical-align: middle;
+  display: inline-block;
+  float:left;
 }
 .footer{
-	height: 20%;
-	 width: 100%;
-	 border: 1px solid #990002;
+  height: 15%;
+  width: 100%;
+  background:#111;
+  color:white;
 }
+
+   ul
+   {
+   list-style-type:none;
+   margin:0;
+   padding:0;
+   }
+   li
+   {
+   display:inline;
+   float: left;
+   list-style: none;
+   }
+   a:link,a:visited
+   {
+   font-weight:bold;
+   color:#000000;
+   padding-left: 3%;
+   text-decoration:none;
+   text-transform:uppercase;
+   }
+   a:hover,a:active
+   {
+    border-bottom: 1px solid;
+    padding: 2px;
+   }
+@media (min-width: 1024px){
+  body{font-size: 18px}
+} /*>=1024的设备*/
+@media (min-width: 1100px) {
+  body{font-size: 20px}
+} /*>=1024的设备*/
+@media (min-width: 1280px) {
+  body{font-size: 22px;}
+} 
+@media (min-width: 1366px) {
+  body{font-size: 24px;}
+}  
+@media (min-width: 1440px) {
+  body{font-size: 25px !important;}
+} 
+@media (min-width: 1680px) {
+  body{font-size: 28px;}
+} 
+@media (min-width: 1920px) {
+  body{font-size: 33px;}
+} 
+
+
+
+
