--- a/asset/css/Style.css
+++ b/asset/css/Style.css
@@ -1,3 +1,5 @@
+
+
 html, body{
   margin: 0;
   border: 0;
@@ -6,6 +8,12 @@ html, body{
   height: 100%;
   overflow: auto;
   height: 100%;
+  background-color: rgb(50, 50, 50);
+  font-family: "Baloo 2", sans-serif;
+  font-weight:400 ;
+}
+html {
+  scroll-behavior: smooth;
 }
 
 *{
@@ -13,6 +21,39 @@ border: 0; /* 移除所有元素的边框 */
 margin: 0;
 }
 
+strong{
+  color: orangered;
+}
+.dot {
+  display: block;
+  /*确保竖直排列*/left: 20vw;
+  margin-bottom: 4vh;
+  width: 1vw;
+  height: 1vw;
+  border-radius: 50%;
+  border: 0.4vh solid #ffffff ;
+  cursor: pointer;
+  -o-transition: width 0.3s, height 0.3s;
+   /* 添加过渡效果使变化更平滑 */
+  -webkit-transition: width 0.3s, height 0.3s;
+  -moz-transition: width 0.3s, height 0.3s;
+  -ms-transition: width 0.3s, height 0.3s;
+  transition: width 0.3s, height 0.3s;
+}
+
+.dot:hover {
+  background-color: #ffffff;
+  width: 1.5vw; /* 放大效果 */
+  height: 1.5vw;
+}
+
+#sideDotNavbar {
+  position: fixed;
+  left: 5vw; /* 或根据页面布局调整 */
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 100;
+}
 .grid-container {
   display: grid;
   grid-template-columns: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
@@ -21,81 +62,35 @@ margin: 0;
   row-gap: 0;
   height: 100vh;
 }
-.overlay{
-  height: 70vh;
-  width: 100vw;
-  grid-column: 1/9;
-  grid-row: 4/7;
-}
-.grid-MainPhoto{
-  grid-column: 1/9;
-  grid-row: 1/9;
-}
 
-.PhotoSize{
-  width: 100vw;
-  height: 100vh;
-}
 
-.SmallLogo{
-  grid-column: 1;
-  grid-row: 1/3;
-  text-align: center;
-  align-self: center;
-}
-
-.SmallLogo-Size{
-  width:calc(2vw + 2vh); ;
-  opacity: 0.5;
-}
-
-.MainPageNumber{
-  grid-column: 4/6;
-  grid-row: 8/9;
-}
-
-.MainPageNumber h1{
-  color: #000000;
-  font-size: calc(1vw + 1vh);
-  text-align: center;
-  align-self: center;
-}
-
-.MainPageTitle{
-  grid-column: 2/5;
-  grid-row: 3;
-  text-align: center;
-  align-self: center;
-}
-
-.MainPageTitle h1{
-  color: #000000;
-  font-size: calc(2.5vw + 2.5vh);
-}
 
 .MainPageParagraph{
   grid-column: 3/7;
-  grid-row: 4/6;
+  grid-row: 3/6;
   text-align: center;
   align-self: center;
 }
 
 .MainPageParagraph h1{
-  color: #000000;
-  font-size: calc(7vw + 7vh);
+  color: #ffffff;
+  font-size: calc(3vw + 9vh);
+  font-family: "Baloo 2", sans-serif;
+  font-weight:800 ;
 }
 
 .MainPageSmallDescribe{
-  grid-column: 6/7;
-  grid-row: 5/8;
+  grid-column: 3/7;
+  grid-row: 5;
   text-align: center;
   align-self: center;
 }
 .MainPageSmallDescribe h1{
-  color: #000000;
-  font-size: calc(1vw + 0.5vh);
-  text-align: right;
+  color: #ffffff;
+  font-size: calc(1vw + 1vh);
   align-self: center;
+  font-family: "Baloo 2", sans-serif;
+  font-weight:400 ;
 }
 
 .MainPageNavBar{
@@ -103,51 +98,8 @@ margin: 0;
   grid-row: 4/6;
 }
 
-.NavBarPosition{
-  
-  grid-column: 1;
-  grid-row: 4/8;
-}
-
-.NavBar{
-  
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: calc(1vh + 1vw);
-}
-
-.Nav{
-  width: calc(0.5vh + 0.5vw);
-  height: calc(0.5vh + 0.5vw);
-  border-radius: 50%;
-  background-color: transparent;
-  border: 0.3vh solid #000000;
-  transition: transform 0.3s ease;
-}
-
-.Nav:hover{
-  transform: scale(1.5);
-  background-color: #000000;
-}
-
-.Nav:hover::after {
-  content: attr(data-page);
-  position: absolute;
-  top: -0.8vh;
-  left: 100%;
-  color: #000000;
-  font-size:calc(0.5vh + 0.5vw) ;
-  margin-left: calc(0.5vh + 0.5vw);
-  white-space: nowrap;
-}
-
-.Nav.active {
-  transform: scale(2);
-  background-color: #000000;
-}
-
 .grid-AboutMe {
+  margin-top: 20vh;
   display: grid;
   grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
   grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
@@ -159,11 +111,16 @@ margin: 0;
 .AboutMe-Background{
   grid-column: 1/11;
   grid-row: 1/11;
+  
 }
 
 .AboutMe-Image{
   grid-column: 3/5;
-  grid-row: 4/9;
+  grid-row: 3/9;
+
+  color: #ffffff;
+  padding: calc(1.5vw + 1.5vh);
+  border: 15px solid #ffffff ;
   text-align: center;
   align-self: center;
 }
@@ -172,204 +129,83 @@ margin: 0;
   width: calc(15vw + 15vh);
 }
 
-.AboutMe-Verti{
-  grid-column: 5;
-  grid-row: 7/9;
-  text-align: center;
-  align-self: center;
-  transform: rotate(270deg); /* 如果需要，旋转文字方向 */
-}
+
 
 .AboutMe-Verti h2{
   font-size: calc(1vw + 1vh); /* 文字大小 */
+  color: #ffffff;
 }
 
 .AboutMe-Title{
-  grid-column: 6/8;
-  grid-row: 4;
+  grid-column: 5/7;
+  grid-row: 2;
   text-align: center;
   align-self: center;
 }
 
 .AboutMe-Title h1{
-  text-align: left;
   font-size: calc(2vw + 2vh);
-  color: #000000;
+  color: #ffffff;
+  text-align: center;
+  align-self: center;
+  font-family: "Baloo 2", sans-serif;
+  font-weight:500 ;
+  z-index: 1;
+  
 }
+
 
 .AboutMe-Paragraph{
   grid-column: 6/9;
-  grid-row: 5/9;
+  grid-row: 2/10;
   text-align: center;
   align-self: center;
+  
 }
 
 .AboutMe-Paragraph p{
-  font-size: calc(0.5vw + 0.5vh);
+  font-size: calc(1vw + 1vh);
   text-align: left;
-  color: #000000;
+  color: #ffffff;
 }
 
 .AboutMe-Number{
   grid-column: 5/7;
   grid-row: 10;
+  
 }
 
 .AboutMe-Number h1{
-  color: #000000;
+  color: #ffffff;
   font-size: calc(1vw + 1vh);
   text-align: center;
   align-self: center;
 }
 
-.grid-MyServices {
-  display: grid;
-  grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
-  grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
-  column-gap: 0;
-  row-gap: 0;
-  height: 100vh;
-}
-
-.MyServices-Title{
-  margin: auto;
-  grid-column: 4/8;
-  grid-row: 1/4;
-}
-
-.MyServices-Title h1{
+.CV-Download {
+  background-color: orangered; /* 绿色 */ 
+  border: none;
+  color: white;
+  padding: 15px 32px;
   text-align: center;
-  align-self: center;
-  font-size: calc(2vw + 2vh);
+  text-decoration: none;
+  display: inline-block;
+  font-size: calc(0.4vw + 0.4vh);
+  margin: 4px 2px;
+  cursor: pointer;
+  transition: background-color 0.5s ease; /* 过渡效果 */
+  border-radius: 10px; /* 圆角边框 */
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); /* 阴影效果 */
 }
 
-.MyServices-Background{
-  grid-column: 1/11;
-  grid-row: 1/11;
+.CV-Download:hover {
+  background-color: rgb(255, 162, 0); /* 鼠标悬停时更深的绿色 */
 }
 
-.MyServices-Game{
-  margin: auto;
-  grid-column: 2/4;
-  grid-row: 4/8;
-  place-items: center;
-  width:calc(6vw +6vh);
-  height:calc(12vw + 12vh);
-}
-.MyServices-Game-text{
-  color: beige;
-  grid-column: 2/4;
-  grid-row: 6/8;
-  text-align: center;
-  align-self: center;
-  border-radius: 15px;
-  padding: 1vw;
-  margin: auto;
-  font-size: calc(2vw + 2vh);
-  backdrop-filter: blur(10px);
-  /*应用10像素的模糊效果*/background-color: rgba(0, 0, 0, 0.5);
-  /*设置半透明的白色背景*/:;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  -ms-border-radius: 15px;
-  -o-border-radius: 15px;
-}
-
-.MyServices-Environment{
-  margin: auto;
-  grid-column: 4/6;
-  grid-row: 4/8;
-  place-items: center;
-  width:calc(6vw + 6vh);
-  height:calc(12vw + 12vh);
-}
-
-.MyServices-Environment-text{
-  color: beige;
-  grid-column: 4/6;
-  grid-row: 6/8;
-  text-align: center;
-  align-self: center;
-  border-radius: 15px;
-  padding: 1vw;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  -ms-border-radius: 15px;
-  -o-border-radius: 15px;
-  margin: auto;
-  font-size: calc(2vw + 2vh);
-  backdrop-filter: blur(10px); /* 应用10像素的模糊效果 */
-  background-color: rgba(0, 0, 0, 0.5); /* 设置半透明的白色背景 */
-}
-
-.MyServices-UI{
-  margin: auto;
-  grid-column: 6/8;
-  grid-row: 4/8;
-  place-items: center;
-  width:calc(6vw + 6vh);
-  height:calc(12vw + 12vh);
-}
-
-.MyServices-UI-text{
-  color: beige;
-  grid-column: 6/8;
-  grid-row: 6/8;
-  text-align: center;
-  align-self: center;
-  padding: 1vw;
-  border-radius: 15px;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  -ms-border-radius: 15px;
-  -o-border-radius: 15px;
-  margin: auto;
-  font-size: calc(2vw + 2vh);
-  backdrop-filter: blur(10px); /* 应用10像素的模糊效果 */
-  background-color: rgba(0, 0, 0, 0.5); /* 设置半透明的白色背景 */
-}
-
-.MyServices-Photo{
-  margin: auto;
-  grid-column: 8/10;
-  grid-row: 4/8;
-  place-items: center;
-  width:calc(6vw + 6vh);
-  height:calc(12vw + 12vh);
-}
-
-.MyServices-Photo-text{
-  color: beige;
-  grid-column: 8/10;
-  grid-row: 6/8;
-  text-align: center;
-  align-self: center;
-  padding: 1vw;
-  border-radius: 15px;
-  -webkit-border-radius: 15px;
-  -moz-border-radius: 15px;
-  -ms-border-radius: 15px;
-  -o-border-radius: 15px;
-  margin: auto;
-  font-size: calc(2vw + 2vh);
-  backdrop-filter: blur(10px); /* 应用10像素的模糊效果 */
-  background-color: rgba(0, 0, 0, 0.5); /* 设置半透明的白色背景 */
-}
-
-.MyServices-Number{
-  grid-column: 5/7;
-  grid-row: 10;
-}
-
-.MyServices-Number h1{
-  color: #000000;
-  font-size: calc(1vw + 1vh);
-  text-align: center;
-  align-self: center;
-}
 
 
 .grid-MyPortfolio{
+  margin-top: 20vh;
   display: grid;
   grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
   grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
@@ -382,126 +218,240 @@ margin: 0;
   grid-column: 4/8;
   grid-row: 1/3;
   margin: auto;
-}
-
-.portfolio-Title h1{
-  text-align: center;
-  align-self: center;
-  font-size: calc(2vw + 2vh);
+  color: #ffffff;
+  
 }
 
 .Portfolio-r1-c1-Photo{
   margin: auto;
-  grid-column: 2/5;
+  grid-column: 2/6;
   grid-row: 3/6;
+  position: relative;
 }
 
-.Portfolio-r1-c1-Photo h1{
-  margin-top: 2vh;
-  font-size: calc(0.7vw + 0.7vh);
+.Portfolio-r1-c1-Photo img{
+  width: calc(12vw + 12vh);
+  height: calc(12vw + 12vh);
+  display: block;
+  border-radius: calc(1vw + 1vh);
+  -webkit-border-radius: calc(1vw + 1vh);
+  -moz-border-radius: calc(1vw + 1vh);
+  -ms-border-radius: calc(1vw + 1vh);
+  -o-border-radius: calc(1vw + 1vh);
 }
 
-.Portfolio-r1-c1-Photo p{
-  margin-top: 1vh;
-  font-size: calc(0.3vw + 0.3vh);
+.Portfolio-r1-c1-Photo:hover .PF-D-overlay {
+  opacity: 1;
+  transform: translateY(0);
+   /* 悬停状态下显示 */ 
+  -webkit-transform: translateY(0);
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -o-transform: translateY(0);
 }
+
+
+
+
+
+
 
 .Portfolio-r1-c2-Photo{
   margin: auto;
-  grid-column: 5/7;
+  grid-column: 4/8;
   grid-row: 3/6;
+  position: relative;
 }
 
-.Portfolio-r1-c2-Photo h1{
-  margin-top: 2vh;
-  font-size: calc(0.7vw + 0.7vh);
+.Portfolio-r1-c2-Photo img{
+  width: calc(12vw + 12vh);
+  height: calc(12vw + 12vh);
+  display: block;
+  border-radius: calc(1vw + 1vh);
+  -webkit-border-radius: calc(1vw + 1vh);
+  -moz-border-radius: calc(1vw + 1vh);
+  -ms-border-radius: calc(1vw + 1vh);
+  -o-border-radius: calc(1vw + 1vh);
 }
 
-.Portfolio-r1-c2-Photo p{
-  margin-top: 1vh;
-  font-size: calc(0.3vw + 0.3vh);
+.Portfolio-r1-c2-Photo:hover .PF-D-overlay {
+  opacity: 1;
+  transform: translateY(0);
+   /* 悬停状态下显示 */ 
+  -webkit-transform: translateY(0);
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -o-transform: translateY(0);
 }
+
+
+
+
+
+
+
+
+
 
 .Portfolio-r1-c3-Photo{
   margin: auto;
-  grid-column: 7/10;
+  grid-column: 6/10;
   grid-row: 3/6;
+  position: relative;
 }
 
-.Portfolio-r1-c3-Photo h1{
-  margin-top: 2vh;
-  font-size: calc(0.7vw + 0.7vh);
+.Portfolio-r1-c3-Photo img{
+  width: calc(12vw + 12vh);
+  height: calc(12vw + 12vh);
+  display: block;
+  border-radius: calc(1vw + 1vh);
+  -webkit-border-radius: calc(1vw + 1vh);
+  -moz-border-radius: calc(1vw + 1vh);
+  -ms-border-radius: calc(1vw + 1vh);
+  -o-border-radius: calc(1vw + 1vh);
 }
 
-.Portfolio-r1-c3-Photo p{
-  margin-top: 1vh;
-  font-size: calc(0.3vw + 0.3vh);
+.Portfolio-r1-c3-Photo:hover .PF-D-overlay {
+  opacity: 1;
+  transform: translateY(0);
+   /* 悬停状态下显示 */ 
+  -webkit-transform: translateY(0);
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -o-transform: translateY(0);
 }
+
+
+
+
+
 
 .Portfolio-r2-c1-Photo{
   margin: auto;
-  grid-column: 2/5;
-  grid-row: 7/10;
+  grid-column: 2/6;
+  grid-row: 7/8;
+  position: relative;
 }
 
-.Portfolio-r2-c1-Photo h1{
-  margin-top: 2vh;
-  font-size: calc(0.7vw + 0.7vh);
+.Portfolio-r2-c1-Photo img{
+  width: calc(12vw + 12vh);
+  height: calc(12vw + 12vh);
+  display: block;
+  border-radius: calc(1vw + 1vh);
+  -webkit-border-radius: calc(1vw + 1vh);
+  -moz-border-radius: calc(1vw + 1vh);
+  -ms-border-radius: calc(1vw + 1vh);
+  -o-border-radius: calc(1vw + 1vh);
 }
 
-.Portfolio-r2-c1-Photo p{
-  margin-top: 1vh;
-  font-size: calc(0.3vw + 0.3vh);
+.Portfolio-r2-c1-Photo:hover .PF-D-overlay {
+  opacity: 1;
+  transform: translateY(0);
+   /* 悬停状态下显示 */ 
+  -webkit-transform: translateY(0);
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -o-transform: translateY(0);
 }
+
+
+
+
+
+
 
 .Portfolio-r2-c2-Photo{
   margin: auto;
-  grid-column: 5/7;
-  grid-row: 7/10;
+  grid-column: 4/8;
+  grid-row: 7/8;
+  position: relative;
 }
 
-.Portfolio-r2-c2-Photo h1{
-  margin-top: 2vh;
-  font-size: calc(0.7vw + 0.7vh);
+.Portfolio-r2-c2-Photo img{
+  width: calc(12vw + 12vh);
+  height: calc(12vw + 12vh);
+  display: block;
+  margin: auto;
+  border-radius: calc(1vw + 1vh);
+  -webkit-border-radius: calc(1vw + 1vh);
+  -moz-border-radius: calc(1vw + 1vh);
+  -ms-border-radius: calc(1vw + 1vh);
+  -o-border-radius: calc(1vw + 1vh);
 }
 
-.Portfolio-r2-c2-Photo p{
-  margin-top: 1vh;
-  font-size: calc(0.3vw + 0.3vh);
+.Portfolio-r2-c2-Photo:hover .PF-D-overlay {
+  opacity: 1;
+  transform: translateY(0);
+   /* 悬停状态下显示 */ 
+  -webkit-transform: translateY(0);
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -o-transform: translateY(0);
 }
+
+
+
+
+
+
 
 .Portfolio-r2-c3-Photo{
   margin: auto;
-  grid-column: 7/10;
-  grid-row: 7/10;
+  grid-column: 6/10;
+  grid-row: 7/8;
+  position: relative;
+}
+.Portfolio-r2-c3-Photo img{
+  width: calc(12vw + 12vh);
+  height: calc(12vw + 12vh);
+  display: block;
+  border-radius: calc(1vw + 1vh);
+  -webkit-border-radius: calc(1vw + 1vh);
+  -moz-border-radius: calc(1vw + 1vh);
+  -ms-border-radius: calc(1vw + 1vh);
+  -o-border-radius: calc(1vw + 1vh);
 }
 
-.Portfolio-r2-c3-Photo h1{
-  margin-top: 2vh;
-  font-size: calc(0.7vw + 0.7vh);
+.Portfolio-r2-c3-Photo:hover .PF-D-overlay {
+  opacity: 1;
+  transform: translateY(0);
+   /* 悬停状态下显示 */ 
+  -webkit-transform: translateY(0);
+  -moz-transform: translateY(0);
+  -ms-transform: translateY(0);
+  -o-transform: translateY(0);
 }
 
-.Portfolio-r2-c3-Photo p{
-  margin-top: 1vh;
-  font-size: calc(0.3vw + 0.3vh);
+
+.PF-D-overlay {
+  position: absolute;
+  bottom: 1.5vh;
+  left: 0;
+  right: 0;
+  background: rgba(50, 50, 50, 1);
+  margin-left: auto;
+  margin-right: auto;
+  /*使用单一背景属性简化*/color: rgb(255, 255, 255);
+  width: 80%;
+  padding: 0.5vw;
+  transition: opacity 0.5s ease, transform 0.5s ease;
+  /*添加transform过渡效果*/opacity: 0;
+  text-align: center;
+  transform: translateY(100%);
+  /*初始状态下隐藏*/-webkit-transform: translateY(100%);
+  -webkit-transition: opacity 0.5s ease, transform 0.5s ease;
+  -moz-transition: opacity 0.5s ease, transform 0.5s ease;
+  -ms-transition: opacity 0.5s ease, transform 0.5s ease;
+  -o-transition: opacity 0.5s ease, transform 0.5s ease;
+  font-size: 2vw;
+  border-radius: calc(2vh);
+  -webkit-border-radius: calc(2vh);
+  -moz-border-radius: calc(2vh);
+  -ms-border-radius: calc(2vh);
+  -o-border-radius: calc(2vh);
 }
 
-.portfolio-image{
-  width:calc(12vw + 12vh);
-  height:calc(5vw + 5vh);
-  transition: transform 1s ease;
-  border-radius: 25px;
-  -webkit-border-radius: 25px;
-  -moz-border-radius: 25px;
-  -ms-border-radius: 25px;
-  -o-border-radius: 25px;
-}
 
-.portfolio-image:hover{
-  width:calc(13vw + 13vh);
-  height:calc(6vw + 6vh);
-  
-}
 
 
 .Portfolio-Number{
@@ -512,7 +462,7 @@ margin: 0;
 }
 
 .portfolio-Number h1{
-  color: #000000;
+  color: #ffffff;
   font-size: calc(2vw + 2vh);
   text-align: center;
   align-self: center;
@@ -524,8 +474,9 @@ margin: 0;
   grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
   column-gap: 0;
   row-gap: 0;
-  height: 20vh;
-  background-color: gray;
+  height: 10vh;
+  background-color: rgb(0, 0, 0)255, 255, 255;
+  
 }
 
 
@@ -537,15 +488,20 @@ margin: 0;
 }
 
 .MyFooter p{
+  color: #ffffff;
   font-size: calc(0.5vw + 0.5vh);
 }
 
 .social-links{
+  color: #ffffff;
   margin: auto;
   grid-column: 4/8;
-  grid-row: 2/6;
+  grid-row: 3/6;
 }
 
-.BG-Color{
-  background-color: darkgrey;
+#particles-js{
+  grid-column: 1/11;
+  grid-row: 1/9;
+  position: relative;
+  z-index: 0;
 }
