--- a/asset/css/StartMenustyle.css
+++ b/asset/css/StartMenustyle.css
@@ -4,7 +4,9 @@ body {
   border: 0;
   padding: 0;
   overflow: hidden;
+  font-family: "Baloo 2", sans-serif;
 }
+
 body {
   background: linear-gradient(112deg, #ffffff 49%, #000000 49%);
 }
@@ -18,93 +20,71 @@ body {
   height: 100vh;
 }
 
-.grid-LeftTitle {
+.Left-Text{
   grid-column: 1/4;
-  grid-row: 2/4;
-  text-align: center;
-  align-self: center;
-}
-.grid-LeftTitle h1{
-  font-size: calc(3vw + 3vh);
-}
-
-.grid-LeftButton {
-  grid-column: 1/4;
-  grid-row: 3/5;
-  text-align: center;
-  align-self: center;
-}
-
-.LeftButton{
-  font-size: 1.5vh;
-  padding-left: 1.2vw;
-  padding-right: 1.2vw;
-  color: #000000;
-  background-color: #ffffff;
-  border: 0.3vh solid #000000;
-  cursor: pointer;
-  transition: all 0.3s ease;
-
-}
-
-.LeftButton:hover{
-  background-color: #000000;
-  color: #ffffff;
-  border-color: #000000;
-}
-.LeftButton:active {
-  background-color: #000000;
-  border-color: #000000;
-}
-
-.grid-Logo {
-  grid-column: 4/6;
   grid-row: 2/5;
+  margin: auto;
   text-align: center;
   align-self: center;
 }
-.Logo{
-  width: calc(14vw + 16vh);;
+
+.Left-Text h1{
+  color: #000000;
+  font-size: 2.5vw;
 }
 
-.grid-RightTitle {
-  grid-column: 6/9;
-  grid-row: 2/4;
+.Mid-para{
+  grid-column: 4/6;
+  grid-row: 5/8;
+  margin: auto;
   text-align: center;
   align-self: center;
   
 }
-.grid-RightTitle h1{
-  font-size: calc(3vw + 3vh);
-  color: #ffae00;
+
+.Mid-para p{
+  color: #ffffff;
+  opacity: 0.4;
 }
 
-.grid-RightButton {
+.Right-Text{
   grid-column: 6/9;
-  grid-row: 3/5;
+  grid-row: 2/5;
+  margin: auto;
   text-align: center;
   align-self: center;
 }
 
-.RightButton{
-  font-size: 1.5vh;
-  padding-left: 1.2vw;
-  padding-right: 1.2vw;
-  color: #ffae00;
-  background-color: transparent;
-  border: 0.3vh solid #ffae00;
-  cursor: pointer;
-  transition: all 0.3s ease;
+.Right-Text h1{
+  font-size: 2.5vw;
+  color: #ffffff;
 }
 
-.RightButton:hover{
-  background-color: #ffae00;
-  color: #ffffff;
-  border-color: #ffae00;
+
+
+.Logo-Container{
+  grid-column: 4/6;
+  grid-row: 2/5;
+  margin: auto;
+  text-align: center;
+  align-self: center;
 }
-.RightButton:active {
-  background-color: #ffae00;
-  border-color: #ffae00;
+
+.Logo {
+  
+  width: calc(8vw + 8vh);
+  opacity: 0.3;
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.Logo:hover{
+  width: calc(14vw + 14vh);
+  opacity: 1;
+ 
+}
+
+#typed {
+  color: orangered;
 }
 
 
