--- a/asset/css/Style.css
+++ b/asset/css/Style.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=VT323');
 
 
-html, body{
+html,
+body {
   margin: 0;
   border: 0;
   padding: 0;
@@ -10,31 +12,38 @@ html, body{
   height: 100%;
   background-color: rgb(50, 50, 50);
   font-family: "Baloo 2", sans-serif;
-  font-weight:400 ;
+  font-weight: 400;
 }
+
+section{
+  height: 100%;
+  width: 100%;
+  bottom: 20vh;
+}
+
 html {
   scroll-behavior: smooth;
 }
 
-*{
-border: 0; /* 移除所有元素的边框 */
-margin: 0;
+* {
+  border: 0;
+  margin: 0;
 }
 
-strong{
+strong {
   color: orangered;
 }
+
 .dot {
   display: block;
-  /*确保竖直排列*/left: 20vw;
+  left: 20vw;
   margin-bottom: 4vh;
-  width: 1vw;
-  height: 1vw;
+  width: 0.5vw;
+  height: 0.5vw;
   border-radius: 50%;
-  border: 0.4vh solid #ffffff ;
+  border: 0.4vh solid #ffffff;
   cursor: pointer;
   -o-transition: width 0.3s, height 0.3s;
-   /* 添加过渡效果使变化更平滑 */
   -webkit-transition: width 0.3s, height 0.3s;
   -moz-transition: width 0.3s, height 0.3s;
   -ms-transition: width 0.3s, height 0.3s;
@@ -43,17 +52,31 @@ strong{
 
 .dot:hover {
   background-color: #ffffff;
-  width: 1.5vw; /* 放大效果 */
-  height: 1.5vw;
+  width: 1vw;
+  height: 1vw;
 }
+
+.dot:active{
+  background-color: rgb(255, 255, 255);
+  width: 0.5vw;
+  height: 0.5vw;
+}
+
+.highlight{
+  background-color: rgb(255, 255, 255);
+  width: 0.5vw;
+  height: 0.5vw;
+}
+
 
 #sideDotNavbar {
   position: fixed;
-  left: 5vw; /* 或根据页面布局调整 */
+  left: 5vw;
   top: 50%;
   transform: translateY(-50%);
   z-index: 100;
 }
+
 .grid-container {
   display: grid;
   grid-template-columns: 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5% 12.5%;
@@ -63,37 +86,53 @@ strong{
   height: 100vh;
 }
 
+.Guide{
+  grid-column: 8;
+  grid-row: 6/9;
+  margin: auto;
+  padding-left: 6vw;
+  
+}
+.Guide h1{
+  -ms-writing-mode:vertical-rl;
+  -webkit-writing-mode:vertical-rl;
+  writing-mode:vertical-rl;
+  color: #ff4500;
+  font-size: 2vw;
+  opacity: 0.5;
+}
 
 
-.MainPageParagraph{
+.MainPageParagraph {
   grid-column: 3/7;
   grid-row: 3/6;
   text-align: center;
   align-self: center;
 }
 
-.MainPageParagraph h1{
+.MainPageParagraph h1 {
   color: #ffffff;
-  font-size: calc(3vw + 9vh);
+  font-size: 10vw;
   font-family: "Baloo 2", sans-serif;
-  font-weight:800 ;
+  font-weight: 800;
 }
 
-.MainPageSmallDescribe{
+.MainPageSmallDescribe {
   grid-column: 3/7;
-  grid-row: 5;
+  grid-row: 6;
   text-align: center;
   align-self: center;
 }
-.MainPageSmallDescribe h1{
+
+.MainPageSmallDescribe h1 {
   color: #ffffff;
   font-size: calc(1vw + 1vh);
   align-self: center;
   font-family: "Baloo 2", sans-serif;
-  font-weight:400 ;
+  font-weight: 400;
 }
 
-.MainPageNavBar{
+.MainPageNavBar {
   grid-column: 1/3;
   grid-row: 4/6;
 }
@@ -108,103 +147,118 @@ strong{
   height: 100vh;
 }
 
-.AboutMe-Background{
-  grid-column: 1/11;
-  grid-row: 1/11;
-  
-}
 
-.AboutMe-Image{
-  grid-column: 3/5;
-  grid-row: 3/9;
-
+.AboutMe-Image {
+  height: auto;
+  width: auto;
   color: #ffffff;
-  padding: calc(1.5vw + 1.5vh);
-  border: 15px solid #ffffff ;
-  text-align: center;
+  padding-right: 18vw;
+  display:grid;
+  align-items: center;
   align-self: center;
+  align-content: center;
 }
 
-.AboutMe-Image img{
-  width: calc(15vw + 15vh);
+.AboutMe-Image .niceBack{
+  height: 20vw;
+  top: 20vh;
+  margin: auto;
+  width: 20vw;
+  border: 1vw solid white;
+  border-radius: 25px;
+  
+  z-index: 0;
+}
+
+.AboutMe-Image img {
+  position: relative;
+  margin: auto;
+  right: -20%;
+  bottom: -20%;
+  width: 20vw;
+  height: 20vw;
+  -o-border-radius: 15%;
+  -webkit-border-radius: 15%;
+  -moz-border-radius: 15%;
+  -ms-border-radius: 15%;
+  border-radius: 15%;
+  z-index: 1;
 }
 
 
 
-.AboutMe-Verti h2{
-  font-size: calc(1vw + 1vh); /* 文字大小 */
-  color: #ffffff;
-}
 
-.AboutMe-Title{
-  grid-column: 5/7;
+.AboutMe-Title {
+  grid-column: 1/11;
   grid-row: 2;
   text-align: center;
   align-self: center;
 }
 
-.AboutMe-Title h1{
-  font-size: calc(2vw + 2vh);
+.AboutMe-Title h1 {
+  font-size: 3vw;
   color: #ffffff;
   text-align: center;
   align-self: center;
   font-family: "Baloo 2", sans-serif;
-  font-weight:500 ;
+  font-weight: 500;
   z-index: 1;
-  
+
 }
 
 
-.AboutMe-Paragraph{
+.AboutMe-Paragraph {
   grid-column: 6/9;
-  grid-row: 2/10;
+  grid-row: 5/8;
   text-align: center;
   align-self: center;
-  
+
 }
 
-.AboutMe-Paragraph p{
-  font-size: calc(1vw + 1vh);
-  text-align: left;
+.AboutMe-Paragraph p {
+  font-size: 0.8vw;
+  text-align: center;
   color: #ffffff;
 }
 
-.AboutMe-Number{
-  grid-column: 5/7;
-  grid-row: 10;
-  
-}
 
-.AboutMe-Number h1{
-  color: #ffffff;
-  font-size: calc(1vw + 1vh);
-  text-align: center;
-  align-self: center;
-}
+
+
+
 
 .CV-Download {
-  background-color: orangered; /* 绿色 */ 
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: calc(0.4vw + 0.4vh);
-  margin: 4px 2px;
-  cursor: pointer;
-  transition: background-color 0.5s ease; /* 过渡效果 */
-  border-radius: 10px; /* 圆角边框 */
-  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); /* 阴影效果 */
+  flex: 1;
+  padding: 0.5vh 1vw;
+  margin: 1vw;
+  border-radius: 999px;
+  border: 0.5vh solid #ff4500;
+  font-family: 'Baloo 2', monospace;
+  font-size: 1vw;
+  white-space: nowrap;
+  color: #fff;
+  background: transparent;
+  background-image: url(../img/BtnFill.png);
+  background-repeat: repeat-x;
+  background-position: 0 -100%;
+  transition: 1.5s ease;
+
+  &:hover {
+    background-position: 500% 0%;
+  }
+  
+  @for $i from 0 through 18 {
+    &:nth-child(#{$i}) {
+      filter: hue-rotate(($i * 20) + deg);
+    }
+  }
 }
 
-.CV-Download:hover {
-  background-color: rgb(255, 162, 0); /* 鼠标悬停时更深的绿色 */
-}
 
 
 
-.grid-MyPortfolio{
+
+
+.grid-MyPortfolio {
   margin-top: 20vh;
   display: grid;
   grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
@@ -214,40 +268,39 @@ strong{
   height: 100vh;
 }
 
-.portfolio-Title{
+.portfolio-Title {
   grid-column: 4/8;
-  grid-row: 1/3;
+  grid-row: 2;
   margin: auto;
   color: #ffffff;
-  
+
 }
 
-.Portfolio-r1-c1-Photo{
+.Portfolio-r1-c1-Photo {
   margin: auto;
-  grid-column: 2/6;
-  grid-row: 3/6;
+  grid-column: 3/6;
+  grid-row: 4;
   position: relative;
 }
 
-.Portfolio-r1-c1-Photo img{
-  width: calc(12vw + 12vh);
-  height: calc(12vw + 12vh);
+.Portfolio-r1-c1-Photo img {
+  width: 12vw;
+  height: 12vw;
   display: block;
-  border-radius: calc(1vw + 1vh);
+  -o-border-radius: calc(1vw + 1vh);
   -webkit-border-radius: calc(1vw + 1vh);
   -moz-border-radius: calc(1vw + 1vh);
   -ms-border-radius: calc(1vw + 1vh);
-  -o-border-radius: calc(1vw + 1vh);
+  border-radius: calc(1vw + 1vh);
 }
 
 .Portfolio-r1-c1-Photo:hover .PF-D-overlay {
   opacity: 1;
-  transform: translateY(0);
-   /* 悬停状态下显示 */ 
+  -o-transform: translateY(0);
   -webkit-transform: translateY(0);
   -moz-transform: translateY(0);
   -ms-transform: translateY(0);
-  -o-transform: translateY(0);
+  transform: translateY(0);
 }
 
 
@@ -256,32 +309,31 @@ strong{
 
 
 
-.Portfolio-r1-c2-Photo{
+.Portfolio-r1-c2-Photo {
   margin: auto;
   grid-column: 4/8;
-  grid-row: 3/6;
+  grid-row: 4;
   position: relative;
 }
 
-.Portfolio-r1-c2-Photo img{
-  width: calc(12vw + 12vh);
-  height: calc(12vw + 12vh);
+.Portfolio-r1-c2-Photo img {
+  width: 12vw;
+  height: 12vw;
   display: block;
-  border-radius: calc(1vw + 1vh);
+  -o-border-radius: calc(1vw + 1vh);
   -webkit-border-radius: calc(1vw + 1vh);
   -moz-border-radius: calc(1vw + 1vh);
   -ms-border-radius: calc(1vw + 1vh);
-  -o-border-radius: calc(1vw + 1vh);
+  border-radius: calc(1vw + 1vh);
 }
 
 .Portfolio-r1-c2-Photo:hover .PF-D-overlay {
   opacity: 1;
-  transform: translateY(0);
-   /* 悬停状态下显示 */ 
+  -o-transform: translateY(0);
   -webkit-transform: translateY(0);
   -moz-transform: translateY(0);
   -ms-transform: translateY(0);
-  -o-transform: translateY(0);
+  transform: translateY(0);
 }
 
 
@@ -293,32 +345,31 @@ strong{
 
 
 
-.Portfolio-r1-c3-Photo{
+.Portfolio-r1-c3-Photo {
   margin: auto;
-  grid-column: 6/10;
-  grid-row: 3/6;
+  grid-column: 5/10;
+  grid-row: 4;
   position: relative;
 }
 
-.Portfolio-r1-c3-Photo img{
-  width: calc(12vw + 12vh);
-  height: calc(12vw + 12vh);
+.Portfolio-r1-c3-Photo img {
+  width: 12vw;
+  height: 12vw;
   display: block;
-  border-radius: calc(1vw + 1vh);
+  -o-border-radius: calc(1vw + 1vh);
   -webkit-border-radius: calc(1vw + 1vh);
   -moz-border-radius: calc(1vw + 1vh);
   -ms-border-radius: calc(1vw + 1vh);
-  -o-border-radius: calc(1vw + 1vh);
+  border-radius: calc(1vw + 1vh);
 }
 
 .Portfolio-r1-c3-Photo:hover .PF-D-overlay {
   opacity: 1;
-  transform: translateY(0);
-   /* 悬停状态下显示 */ 
+  -o-transform: translateY(0);
   -webkit-transform: translateY(0);
   -moz-transform: translateY(0);
   -ms-transform: translateY(0);
-  -o-transform: translateY(0);
+  transform: translateY(0);
 }
 
 
@@ -326,32 +377,31 @@ strong{
 
 
 
-.Portfolio-r2-c1-Photo{
+.Portfolio-r2-c1-Photo {
   margin: auto;
-  grid-column: 2/6;
-  grid-row: 7/8;
+  grid-column: 3/6;
+  grid-row: 8;
   position: relative;
 }
 
-.Portfolio-r2-c1-Photo img{
-  width: calc(12vw + 12vh);
-  height: calc(12vw + 12vh);
+.Portfolio-r2-c1-Photo img {
+  width: 12vw;
+  height: 12vw;
   display: block;
-  border-radius: calc(1vw + 1vh);
+  -o-border-radius: calc(1vw + 1vh);
   -webkit-border-radius: calc(1vw + 1vh);
   -moz-border-radius: calc(1vw + 1vh);
   -ms-border-radius: calc(1vw + 1vh);
-  -o-border-radius: calc(1vw + 1vh);
+  border-radius: calc(1vw + 1vh);
 }
 
 .Portfolio-r2-c1-Photo:hover .PF-D-overlay {
   opacity: 1;
-  transform: translateY(0);
-   /* 悬停状态下显示 */ 
+  -o-transform: translateY(0);
   -webkit-transform: translateY(0);
   -moz-transform: translateY(0);
   -ms-transform: translateY(0);
-  -o-transform: translateY(0);
+  transform: translateY(0);
 }
 
 
@@ -360,33 +410,32 @@ strong{
 
 
 
-.Portfolio-r2-c2-Photo{
+.Portfolio-r2-c2-Photo {
   margin: auto;
   grid-column: 4/8;
-  grid-row: 7/8;
+  grid-row: 8;
   position: relative;
 }
 
-.Portfolio-r2-c2-Photo img{
-  width: calc(12vw + 12vh);
-  height: calc(12vw + 12vh);
+.Portfolio-r2-c2-Photo img {
+  width: 12vw;
+  height: 12vw;
   display: block;
   margin: auto;
-  border-radius: calc(1vw + 1vh);
+  -o-border-radius: calc(1vw + 1vh);
   -webkit-border-radius: calc(1vw + 1vh);
   -moz-border-radius: calc(1vw + 1vh);
   -ms-border-radius: calc(1vw + 1vh);
-  -o-border-radius: calc(1vw + 1vh);
+  border-radius: calc(1vw + 1vh);
 }
 
 .Portfolio-r2-c2-Photo:hover .PF-D-overlay {
   opacity: 1;
-  transform: translateY(0);
-   /* 悬停状态下显示 */ 
+  -o-transform: translateY(0);
   -webkit-transform: translateY(0);
   -moz-transform: translateY(0);
   -ms-transform: translateY(0);
-  -o-transform: translateY(0);
+  transform: translateY(0);
 }
 
 
@@ -395,31 +444,31 @@ strong{
 
 
 
-.Portfolio-r2-c3-Photo{
+.Portfolio-r2-c3-Photo {
   margin: auto;
-  grid-column: 6/10;
-  grid-row: 7/8;
+  grid-column: 5/10;
+  grid-row: 8;
   position: relative;
 }
-.Portfolio-r2-c3-Photo img{
-  width: calc(12vw + 12vh);
-  height: calc(12vw + 12vh);
+
+.Portfolio-r2-c3-Photo img {
+  width: 12vw;
+  height: 12vw;
   display: block;
-  border-radius: calc(1vw + 1vh);
+  -o-border-radius: calc(1vw + 1vh);
   -webkit-border-radius: calc(1vw + 1vh);
   -moz-border-radius: calc(1vw + 1vh);
   -ms-border-radius: calc(1vw + 1vh);
-  -o-border-radius: calc(1vw + 1vh);
+  border-radius: calc(1vw + 1vh);
 }
 
 .Portfolio-r2-c3-Photo:hover .PF-D-overlay {
   opacity: 1;
-  transform: translateY(0);
-   /* 悬停状态下显示 */ 
+  -o-transform: translateY(0);
   -webkit-transform: translateY(0);
   -moz-transform: translateY(0);
   -ms-transform: translateY(0);
-  -o-transform: translateY(0);
+  transform: translateY(0);
 }
 
 
@@ -431,44 +480,41 @@ strong{
   background: rgba(50, 50, 50, 1);
   margin-left: auto;
   margin-right: auto;
-  /*使用单一背景属性简化*/color: rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
   width: 80%;
   padding: 0.5vw;
-  transition: opacity 0.5s ease, transform 0.5s ease;
-  /*添加transform过渡效果*/opacity: 0;
+  -o-transition: opacity 0.5s ease, transform 0.5s ease;
+  opacity: 0;
   text-align: center;
+  -webkit-transform: translateY(100%);
   transform: translateY(100%);
-  /*初始状态下隐藏*/-webkit-transform: translateY(100%);
   -webkit-transition: opacity 0.5s ease, transform 0.5s ease;
   -moz-transition: opacity 0.5s ease, transform 0.5s ease;
   -ms-transition: opacity 0.5s ease, transform 0.5s ease;
-  -o-transition: opacity 0.5s ease, transform 0.5s ease;
-  font-size: 2vw;
-  border-radius: calc(2vh);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+
+  -o-border-radius: calc(2vh);
   -webkit-border-radius: calc(2vh);
   -moz-border-radius: calc(2vh);
   -ms-border-radius: calc(2vh);
-  -o-border-radius: calc(2vh);
+  border-radius: calc(2vh);
 }
 
 
 
 
-.Portfolio-Number{
+.Portfolio-Number {
   grid-column: 5/7;
-  grid-row: 10;
-  text-align: center;
-  align-self: center;
-}
-
-.portfolio-Number h1{
+  grid-row: 9;
+  margin: auto;
   color: #ffffff;
-  font-size: calc(2vw + 2vh);
+  font-size: calc(0.7vw + 0.7vh);
   text-align: center;
   align-self: center;
 }
 
-.grid-MyFooter{
+
+.grid-MyFooter {
   display: grid;
   grid-template-columns: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
   grid-template-rows: 10% 10% 10% 10% 10% 10% 10% 10% 10% 10%;
@@ -476,32 +522,50 @@ strong{
   row-gap: 0;
   height: 10vh;
   background-color: rgb(0, 0, 0)255, 255, 255;
-  
+
 }
 
 
-.MyFooter{
+.MyFooter {
   grid-column: 4/8;
   grid-row: 1/5;
   margin: auto;
-  
+
 }
 
-.MyFooter p{
+.MyFooter p {
   color: #ffffff;
   font-size: calc(0.5vw + 0.5vh);
 }
 
-.social-links{
+.social-links {
   color: #ffffff;
   margin: auto;
   grid-column: 4/8;
   grid-row: 3/6;
 }
 
-#particles-js{
+#particles-js {
   grid-column: 1/11;
   grid-row: 1/9;
   position: relative;
   z-index: 0;
+}
+
+#Yang{
+  color: orangered;
+}
+
+.PF-D-overlay h1{
+  font-size: 1.5vw;
+
+}
+
+.PF-D-overlay p{
+  font-size: 0.75vw;
+
+}
+
+.CV-Download h1{
+  font-size: 1.5vw;
 }
